# Project-scanner

./: .dockerignore  .env.example  .gitignore  DLQ.jsonl  Dockerfile  GAPS_ANALYSIS.md  INFRASTRUCTURE_COMPLIANCE_AUDIT.md  README.md  pyproject.toml  request-body.json  requirements.txt
docs/: CODEBASE_SUMMARY.md
reports/: scan_d28cb2dc-4f74-43f6-b7bd-4d5ffacc6a69.md
scripts/: check_full_response.py  debug_repo_flow.py
summary_api/: README.md  __init__.py  audit.py  config.py  dlq.py  github_client.py  llm_client.py  main.py  repo_processor.py  requirements.txt  schemas.py  workflow.py
summary_api/api/: __init__.py  main.py
summary_api/clients/: __init__.py  github_client.py  github_fetcher_impl.py  llm_client.py
summary_api/contracts/: __init__.py  interfaces.py
summary_api/core/: __init__.py  audit.py  config.py  context_compression.py  scratchpad.py
summary_api/infrastructure/: __init__.py  audit.py  dlq.py
summary_api/models/: __init__.py  schemas.py  state.py
summary_api/nodes/: __init__.py  batch_fetcher.py  decider.py  selector.py  summarizer.py  synthesizer.py
summary_api/prompts/: __init__.py  planner_system_scan.j2  planner_user_scan.j2  prompts.py  system.j2  system_scan.j2  user.j2  user_scan.j2
summary_api/services/: __init__.py  planner_service.py  repo_processor.py  report_synthesizer.py  selection.py  summarizer.py  vulnerability_scanner.py
summary_api/tools/: __init__.py  summarize.py
summary_api/workflows/: __init__.py  graph.py  nodes.py  scan_nodes.py  state.py
tests/: conftest.py
tests/summary_api/: test_config.py  (+6 more)
