[project]
name = "summary-api"
version = "0.1.0"
description = "API service that summarizes public GitHub repositories using FastAPI and Nebius Token Factory."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.135.1",
    "uvicorn[standard]==0.41.0",
    "pydantic-settings==2.13.1",
    "httpx==0.28.1",
    "pytest==9.0.2",
    "python-dotenv==1.2.2",
    "tenacity==9.1.4",
    "circuitbreaker==2.1.3",
    "jinja2>=3.1.0",
]
